# src/main/kotlin/nosov/models/InterviewDTO.kt
@@ -6,5 +6,6 @@ import kotlinx.serialization.Serializable
 data class InterviewDTO(
     val id: String? = null,
     val creatorName: String,
-    val questions: List<Question>
+    val questions: List<Question>,
+    val orderQuestions: List<Int>?
 ) {}
