# src/main/kotlin/nosov/models/InterviewOrderDTO.kt
@@ -1,0 +1,6 @@
+package nosov.models
+
+import kotlinx.serialization.Serializable
+
+@Serializable
+data class InterviewOrderDTO(val orderQuestions: List<Int>?, val size: Int?) {}
